2007-08-27    <mschimek@users.sf.net>

	* src/misc.c, src/misc.h, src/intl-priv.h, src/conv.c:
	  Compile fixes.

	* test/export.c: Replaced read loop etc by new read_stream helper
	  functions. Added support for DVB PES & TS streams and the
	  standard options -h -q -V.
	* test/decode.c: Replaced read loop etc by new read_stream helper
	  functions. Added support for DVB TS streams. Replaced some other
	  functions by helpers. Added -q (quiet) switch. Renamed -m
	  (metronome) switch to -M, -T (time) to -m because -T is --ts
	  everywhere else.
	* test/caption.c: Replaced read loop etc by new read_stream helper
	  functions. 
	* test/sliced.c, test/sliced.h: Added new helper functions.
	  Improved the sliced VBI file reading functions.

	* test/capture.c (main): vbi_dvb_mux interface changed.
	* test/test-dvb_mux.cc: New unit test for the vbi_dvb_mux
	  module. Phew!
	* test/Makefile.am (TESTS, check_PROGRAMS): Added test-dvb_mux.
	* src/sliced.h: Added extern C brackets for inclusion into
	  test-dvb_mux.cc.
	* src/raw_decoder.c (vbi_sliced_name, vbi_sliced_payload_bits):
	  Returned nothing for VBI_SLICED_TELETEXT_B_L25_625.
	* src/dvb_mux.c, src/dvb_mux.c: Rewrote this code and improved
	  the interface. Added better support for raw VBI data. Added a
	  minimum and maximum instead of one target PES packet size.
	* src/dvb_demux.c, src/dvb_demux.h: Added _vbi_dvb_skip_data_unit(),
	  _vbi_dvb_demultiplex_sliced(), _vbi_dvb_ts_demux_new()
	  (experimental).
	* src/Makefile.am (LIBZVBI_HDRS): Added dvb_mux.h.
	* doc/Doxyfile.in (FILE_PATTERNS): Added dvb_mux.h.

	* src/page_table.c, src/page_table.h: New module.
	* src/misc.c, src/misc.h: Added _vbi_popcnt() for page_table.c.
	* src/sliced_filter.c: Moved the Teletext page table into a new
	  module page_table.c because the code is useful for other
	  purposes.
	* src/Makefile.am (libzvbi_la_SOURCES): Added page_table.c,
	  page_table.h.

	* src/proxy-msg.c (vbi_proxy_msg_logger) 